Bug 1433339: Apply single-item fallback behavior for 'space-between' more directly, in flexbox code. r=mats

MozReview-Commit-ID: BRx4xGaJS6y